# api-rest-mongo-rust

./: .env.dist  Cargo.toml
src/: main.rs
src/api/: handler.rs  response.rs
src/db/: db.rs
src/models/: customer.rs  mod.rs  seller_point.rs
