[package]
name = "api-mongodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
actix-identity = "0.4"
chrono = { version = "0.4.30", features = ["serde"] }
env_logger = "0.10.0"
serde = { version = "1.0.188", features = ["derive"] }
mongodb = { version = "2.3.1", default-features = false, features = ["async-std-runtime"] }
dotenv = "0.15.0"
futures = "0.3"
utoipa-swagger-ui = { version = "3.1.5", features = ["actix-web"] }
utoipa = { version = "3", features = ["actix_extras"] }
serde_json = "1.0.107"
